Hopefully fixed thumbnail issue in IE, made a few content edits

--- a/views/party.haml
+++ b/views/party.haml
@@ -88,7 +88,7 @@
     .name Dane
     .title 
     .bio
-      Dane was one of the first friends I made during my Freshman year of highschool.  We were the kinda weird ska/punk kids.  Some of my favorite memories from highschool involved hanging out at his house, including the first real show I ever played.  I have probably played shared a stage more often with Dane than with any other bandmate I've ever had and every time it has been an honor.  Along with his percussionary prowess Dane has the biggest heart of anybody I know and I'm very grateful to have him in my life.  
+      Dane was one of the first friends I made during my Freshman year of highschool.  We were the kinda weird ska/punk kids.  Some of my favorite memories from highschool involved hanging out at his house, including the first real show I ever played.  I have probably shared a stage with Dane more often than with any other bandmate I've ever had and every time it has been an honor.  Along with his percussionary prowess Dane has the biggest heart of anybody I know and I'm very grateful to have him in my life.  
 
 %h2.page_title(title="Yes, we made up a wedding job called 'Family Guard'.  It's so we could have a member of our family stand up with us during the ceremony.  It's our wedding we can make stuff up if we want.")
   Family Guard
