Correcting some typos in the copy

--- a/views/details.haml
+++ b/views/details.haml
@@ -8,7 +8,7 @@
   Where?
 
 :markdown
-  The wedding will be held at [Lacuna Art Lofts](http://lacuna2150.com/ "Lacuna Art Lofts") ( [2150 S. Canalport Ave, Chicago, IL](https://maps.google.com/maps?q=2150+South+Canalport+Avenue,+Chicago,+IL&hl=en&sll=41.853179,-87.650155&sspn=0.010533,0.022037&oq=2150+s+canalport+chicago,+il&hnear=2150+S+Canalport+Ave,+Chicago,+Illinois+60616&t=m&z=16) ).  The ceremony will be held on the roof (weather permitting) and the reception will held on the first floor of the same building.
+  The wedding will be held at [Lacuna Art Lofts](http://lacuna2150.com/ "Lacuna Art Lofts") ( [2150 S. Canalport Ave, Chicago, IL](https://maps.google.com/maps?q=2150+South+Canalport+Avenue,+Chicago,+IL&hl=en&sll=41.853179,-87.650155&sspn=0.010533,0.022037&oq=2150+s+canalport+chicago,+il&hnear=2150+S+Canalport+Ave,+Chicago,+Illinois+60616&t=m&z=16) ).  The ceremony will take place on the roof (weather permitting) and the reception will held on the first floor of the same building.
 
 %h2.page_title
   What else?
