--- a/views/party.haml
+++ b/views/party.haml
@@ -53,7 +53,7 @@
     .name Jeff
     .title best man
     .bio
-      I met Jeff in 7th grade and we've somehow been friends ever since.  I say "somehow" because to the untrained eye we appear to be polar opposites.  This might be true but it didn't stop us from being virtually inseparable during Jr. high, high school (a feat made all the more impressive by the fact that we went to different hight schools), and college (where we lived together for 4 years and managed to no kill each other).  Even though these days we live a few thousand miles apart we still talk online almost every day.  
+      I met Jeff in 7th grade and we've somehow been friends ever since.  I say "somehow" because to the untrained eye we appear to be polar opposites.  This might be true but it didn't stop us from being virtually inseparable during Jr. high, high school (a feat made all the more impressive by the fact that we went to different hight schools), and college (where we lived together for 4 years and managed to not kill each other).  Even though these days we live a few thousand miles apart we still talk online almost every day.  
   .party_member
     %img.party_photo(src="../images/party/kyle.jpg" width="150" height="150")
     %a(name="kyle")
@@ -67,7 +67,7 @@
     .name Rich
     .title 
     .bio
-      Rich is another old friend from Jr. high (never underestimate the bonding power of Catholic school).  After spending our youth together devoting our time to childish mischief making we eventually grew up, became adults, and became roommates in Chicago where we devoted our time to childish mischief making.  Many a glorious evening was spent on our balcony in Chicago drinking Early Times whiskey and people watching.  Now that we live in different states most of our communications are done through the exchange of dirty jokes and our bond is as close as ever.
+      Rich is another old friend from grade school (never underestimate the bonding power of Catholic school).  After spending our youth together devoting our time to childish mischief making we eventually grew up, became adults, and became roommates in Chicago where we devoted our time to childish mischief making.  Many a glorious evening was spent on our balcony in Chicago drinking Early Times whiskey and people watching.  Now that we live in different states most of our communications are done through the exchange of dirty jokes and our bond is as close as ever.
   .party_member
     %img.party_photo(src="../images/party/chris.jpg" width="150" height="150")
     %a(name="chris")
