Updated hotel info

--- a/views/details.haml
+++ b/views/details.haml
@@ -2,16 +2,28 @@
   When?
 
 :markdown
-  We are getting married on August 2nd, 2014.  The ceremony starts at 5:00 and will be immediately followed by food, drinks, and general good times. The reception will end at 11:00. We don't have to go home but Lacuna management has informed me that we can't stay there.
+  __Saturday, August 2nd, 2014 at 5:00pm__
+
+  The ceremony starts at 5:00 and will be immediately followed by food, drinks, and general good times. The reception will end at 11:00. We don't have to go home but Lacuna management has informed me that we can't stay there.
 
 %h2.page_title
   Where?
 
 :markdown
-  The wedding will be held at [Lacuna Art Lofts](http://lacuna2150.com/ "Lacuna Art Lofts") ( [2150 S. Canalport Ave, Chicago, IL](https://maps.google.com/maps?q=2150+South+Canalport+Avenue,+Chicago,+IL&hl=en&sll=41.853179,-87.650155&sspn=0.010533,0.022037&oq=2150+s+canalport+chicago,+il&hnear=2150+S+Canalport+Ave,+Chicago,+Illinois+60616&t=m&z=16) ).  The ceremony will take place on the roof (weather permitting) and the reception will held on the first floor of the same building.
+  __[Lacuna Art Lofts](http://lacuna2150.com/ "Lacuna Art Lofts") ( [2150 S. Canalport Ave, Chicago, IL](https://maps.google.com/maps?q=2150+South+Canalport+Avenue,+Chicago,+IL&hl=en&sll=41.853179,-87.650155&sspn=0.010533,0.022037&oq=2150+s+canalport+chicago,+il&hnear=2150+S+Canalport+Ave,+Chicago,+Illinois+60616&t=m&z=16) )__
+
+  The ceremony will take place on the roof (weather permitting) and the reception will held on the first floor of the same building.
+
+%h2.page_title
+  Where can I stay?
+
+:markdown
+  __[Hyatt Regency McCormick Place](http://www.mccormickplace.hyatt.com/en/hotel/home.html) ( [2233 S Dr Martin Luther King Jr Dr, Chicago, IL ](https://maps.google.com/maps?q=%092233+S+Dr+Martin+Luther+King+Jr+Dr,+Chicago,+IL+60616&hl=en&geocode=+&hnear=2233+S+Dr+Martin+Luther+King+Jr+Dr,+Chicago,+Cook,+Illinois+60616&t=m&z=16))__
+
+  We had the bright idea of getting married on the same weekend as Lollapalooza so hotel rooms are getting booked up fast. You can call them at 1-888-421-1442 and mention the Schwantes/Hays wedding to get our block rate.
 
 %h2.page_title
   What else?
 
 :markdown
-  I you feel the uncontrollable urge to buy us stuff we are registered at Guitar Center, Think Geek, and The LEGO Store.  *(This list may be adjusted after Eileen reads this. - D)*
+  I you feel the uncontrollable urge to buy us stuff, we will be registering for gifts soon. Please check back later.
