--- a/views/index.haml
+++ b/views/index.haml
@@ -11,4 +11,4 @@
 %img(src="../images/fact.png")
 .fact
   :markdown
-    If you've forgotten how send mail you can RSVP right here on this website *(sometime in the future)*
+    If you need a place to crash after the wedding, we recommend the [Hyatt Regency McCormick Place](http://www.mccormickplace.hyatt.com/en/hotel/home.html). You can call them at 1-888-421-1442. We have rooms blocked off there, so tell them you know us and they will hook you up.
