Added hotel link

--- a/views/details.haml
+++ b/views/details.haml
@@ -20,7 +20,10 @@
 :markdown
   __[Hyatt Regency McCormick Place](http://www.mccormickplace.hyatt.com/en/hotel/home.html) ( [2233 S Dr Martin Luther King Jr Dr, Chicago, IL ](https://maps.google.com/maps?q=%092233+S+Dr+Martin+Luther+King+Jr+Dr,+Chicago,+IL+60616&hl=en&geocode=+&hnear=2233+S+Dr+Martin+Luther+King+Jr+Dr,+Chicago,+Cook,+Illinois+60616&t=m&z=16))__
 
-  We had the bright idea of getting married on the same weekend as Lollapalooza so hotel rooms are getting booked up fast. You can call them at 1-888-421-1442 and mention the Schwantes/Hays wedding to get our block rate.
+  We had the bright idea of getting married on the same weekend as Lollapalooza so hotel rooms are getting booked up fast. We have a block of rooms reserved at $175 per night. You can book one of these rooms two ways:
+  
+  1. Book online using [this link](https://resweb.passkey.com/go/HaysSchwantesWedding) 
+  2. Call them at 1-888-421-1442 and mention the Hays/Schwantes wedding to get our block rate.
 
 %h2.page_title
   What else?
