Updated details page with registry links

--- a/views/details.haml
+++ b/views/details.haml
@@ -26,7 +26,16 @@
   2. Call them at 1-888-421-1442 and mention the Hays/Schwantes wedding to get our block rate.
 
 %h2.page_title
-  What else?
+  What can I get you?
 
 :markdown
-  I you feel the uncontrollable urge to buy us stuff, we will be registering for gifts soon. Please check back later.
+  If you feel the uncontrollable urge to buy us stuff here are some places that we are registered:
+  
+  - [REI](http://www.rei.com/GiftRegistryDetails/GR62918602)
+  - [Crate & Barrel](http://www.crateandbarrel.com/Gift-Registry/Eileen-Hays-and-Dave-Schwantes/r5168362)
+  - [CB2](http://www.cb2.com/Gift-Registry/Eileen-Hays-and-Dave-Schwantes/r5100501)
+  - [Amazon](http://www.amazon.com/gp/registry/wedding/3J6L9SFMLCX5D)
+
+  Perhaps we already have enough stuff. If you think so, too please just donate to one of these organizations instead of buying us something:
+
+  - [The National Center For Science Education](http://ncse.com/)
