Quick content updates

--- a/views/details.haml
+++ b/views/details.haml
@@ -18,7 +18,7 @@
   Where can I stay?
 
 :markdown
-  __[Hyatt Regency McCormick Place](http://www.mccormickplace.hyatt.com/en/hotel/home.html) ( [2233 S Dr Martin Luther King Jr Dr, Chicago, IL ](https://maps.google.com/maps?q=%092233+S+Dr+Martin+Luther+King+Jr+Dr,+Chicago,+IL+60616&hl=en&geocode=+&hnear=2233+S+Dr+Martin+Luther+King+Jr+Dr,+Chicago,+Cook,+Illinois+60616&t=m&z=16))__
+  __[Hyatt Regency McCormick Place](https://resweb.passkey.com/go/HaysSchwantesWedding) ( [2233 S Dr Martin Luther King Jr Dr, Chicago, IL ](https://maps.google.com/maps?q=%092233+S+Dr+Martin+Luther+King+Jr+Dr,+Chicago,+IL+60616&hl=en&geocode=+&hnear=2233+S+Dr+Martin+Luther+King+Jr+Dr,+Chicago,+Cook,+Illinois+60616&t=m&z=16))__
 
   We had the bright idea of getting married on the same weekend as Lollapalooza so hotel rooms are getting booked up fast. We have a block of rooms reserved at $175 per night. You can book one of these rooms two ways:
   
@@ -35,7 +35,8 @@
   - [Crate & Barrel](http://www.crateandbarrel.com/Gift-Registry/Eileen-Hays-and-Dave-Schwantes/r5168362)
   - [CB2](http://www.cb2.com/Gift-Registry/Eileen-Hays-and-Dave-Schwantes/r5100501)
   - [Amazon](http://www.amazon.com/gp/registry/wedding/3J6L9SFMLCX5D)
+  - or just contribute to our honeymoon
 
-  Perhaps we already have enough stuff. If you think so, too please just donate to one of these organizations instead of buying us something:
+  Perhaps we already have enough stuff. If you think so, too please just make a donation in our name instead of buying us something:
 
-  - [The National Center For Science Education](http://ncse.com/)
+  - [The National Center For Science Education](https://ncse.secure.force.com/donate)
