--- a/views/index.haml
+++ b/views/index.haml
@@ -11,4 +11,4 @@
 %img(src="../images/fact.png")
 .fact
   :markdown
-    If you need a place to crash after the wedding, we recommend the [Hyatt Regency McCormick Place](http://www.mccormickplace.hyatt.com/en/hotel/home.html). You can call them at 1-888-421-1442 or book online [here](https://resweb.passkey.com/go/HaysSchwantesWedding). We have rooms blocked off there, so tell them you know us and they will hook you up.
+    If you need a place to crash after the wedding, we recommend the [Hyatt Regency McCormick Place](https://resweb.passkey.com/go/HaysSchwantesWedding). You can call them at 1-888-421-1442 or book online [here](https://resweb.passkey.com/go/HaysSchwantesWedding). We have rooms blocked off there, so tell them you know us and they will hook you up.
