Added some more details to the site

--- a/views/details.haml
+++ b/views/details.haml
@@ -2,9 +2,11 @@
   When?
 
 :markdown
-  __Saturday, August 2nd, 2014 at 5:00pm__
+  __Saturday, August 2nd, 2014 at 4:30pm__
 
-  The ceremony starts at 5:00 and will be immediately followed by food, drinks, and general good times. The reception will end at 11:00. We don't have to go home but Lacuna management has informed me that we can't stay there.
+  The ceremony starts at 4:30 and will be immediately followed by food, drinks, and general good times. The reception will end at 11:00. We don't have to go home but Lacuna management has informed me that we can't stay there.
+
+  Lollapalooza is being held in Chicago this weekend so plan for bad traffic.
 
 %h2.page_title
   Where?
@@ -25,6 +27,8 @@
   1. Book online using [this link](https://resweb.passkey.com/go/HaysSchwantesWedding) 
   2. Call them at 1-888-421-1442 and mention the Hays/Schwantes wedding to get our block rate.
 
+  A bus will shuttle people from the Hyatt to Lacuna before the ceremony and back to the Hyatt after the reception.
+
 %h2.page_title
   What can I get you?
 
@@ -36,6 +40,8 @@
   - [CB2](http://www.cb2.com/Gift-Registry/Eileen-Hays-and-Dave-Schwantes/r5100501)
   - [Amazon](http://www.amazon.com/gp/registry/wedding/3J6L9SFMLCX5D)
   - or just contribute to our honeymoon
+
+  Feel free to have things shipped directly to our apartment.
 
   Perhaps we already have enough stuff. If you think so, too please just make a donation in our name instead of buying us something:
 
