Added instructions to birdwatcher display

--- a/sass/birdwatcher.scss
+++ b/sass/birdwatcher.scss
@@ -12,6 +12,10 @@ body {
   text-align: center;
 }
 
+.instructions {
+  font-size: 24px;
+}
+
 .bw_photo {
   margin-bottom: 10px;
 }
@@ -30,7 +34,7 @@ body {
 
 .photo_shell {
   margin-top: 20px;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
 }
 
