--- a/views/live_photos.erb
+++ b/views/live_photos.erb
@@ -21,6 +21,9 @@
 })();
 </script>
 <img src="images/d_and_e_minilogo.png">
+<div class="instructions">
+Tag Twitter and Instagram photos with <b>#daveandeileen</b> to have them displayed here!
+</div>
 <div class="photo"></div>
 
 </body>
