--- a/public/stylesheets/birdwatcher.css
+++ b/public/stylesheets/birdwatcher.css
@@ -6,6 +6,10 @@ body {
   text-align: center;
 }
 
+.instructions {
+  font-size: 24px;
+}
+
 .bw_photo {
   margin-bottom: 10px;
 }
@@ -24,7 +28,7 @@ body {
 
 .photo_shell {
   margin-top: 20px;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
 }
 
