Updated details and fixed countdown

--- a/views/details.haml
+++ b/views/details.haml
@@ -39,7 +39,7 @@
   - [Crate & Barrel](http://www.crateandbarrel.com/Gift-Registry/Eileen-Hays-and-Dave-Schwantes/r5168362)
   - [CB2](http://www.cb2.com/Gift-Registry/Eileen-Hays-and-Dave-Schwantes/r5100501)
   - [Amazon](http://www.amazon.com/gp/registry/wedding/3J6L9SFMLCX5D)
-  - or just contribute to our honeymoon
+  - or just contribute to our honeymoon (cash, check, bitcoin, or gold bars will be fine)
 
   Feel free to have things shipped directly to our apartment.
 
